fix: change styles(align code,body,response boxes;change header color when sticky)

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -63,6 +63,7 @@ body {
 header {
   position: sticky;
   top: 20px;
+  z-index: 10;
 }
 
 main {
